helm_values/ingress-routes/gitea-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`gitea.glitcher.ddnsfree.com`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
#  tls:
#    certResolver: letsencrypt
